feat: integrate Foursquare Places API