@@ -1,245 +1,209 @@
 package com.smarttrip.api.integration.foursquare;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.boot.restclient.test.MockServerRestClientCustomizer;
-import org.springframework.http.HttpHeaders;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.restclient.test.autoconfigure.RestClientTest;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.cache.CacheManager;
+import org.springframework.cache.concurrent.ConcurrentMapCacheManager;
+import org.springframework.context.annotation.Bean;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.client.MockRestServiceServer;
-import org.springframework.web.client.RestClient;
 
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.startsWith;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.springframework.http.HttpMethod.GET;
-import static org.springframework.test.web.client.match.MockRestRequestMatchers.header;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.method;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.queryParam;
-import static org.springframework.test.web.client.match.MockRestRequestMatchers.requestTo;
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withSuccess;
 
+@RestClientTest(FoursquareClient.class)
 class FoursquareClientTest {
 
+    @Autowired
     private FoursquareClient foursquareClient;
 
+    @Autowired
     private MockRestServiceServer mockServer;
 
-    @BeforeEach
-    void setUp() {
+    @TestConfiguration
+    static class TestConfig {
 
-        RestClient.Builder restClientBuilder =
-                RestClient.builder();
-
-        MockServerRestClientCustomizer customizer =
-                new MockServerRestClientCustomizer();
-
-        customizer.customize(restClientBuilder);
-
-        mockServer = customizer.getServer();
-
-        foursquareClient = new FoursquareClient(
-                restClientBuilder,
-                "test-api-key"
-        );
+        @Bean
+        CacheManager cacheManager() {
+            return new ConcurrentMapCacheManager("foursquarePlaces");
+        }
     }
 
     @Test
-    void shouldFindPlacesInRome() {
+    void shouldSearchPlacesByCoordinates() {
 
-        String jsonResponse = """
-                {
-                  "results": [
-                    {
-                      "fsq_place_id": "test-colosseum-id",
-                      "name": "Colosseum",
-                      "latitude": 41.8902,
-                      "longitude": 12.4922,
-                      "geocodes": {
-                        "main": {
-                          "latitude": 41.8902,
-                          "longitude": 12.4922
+        mockServer.expect(request -> {
+                    assertThat(request.getURI().getPath())
+                            .isEqualTo("/places/search");
+                })
+                .andExpect(method(HttpMethod.GET))
+                .andExpect(queryParam("ll", "48.8566,2.3522"))
+                .andExpect(queryParam("radius", "1000"))
+                .andExpect(queryParam("limit", "10"))
+                .andExpect(queryParam(
+                        "fields",
+                        "fsq_place_id,name,geocodes,location,categories,distance,rating,popularity"
+                ))
+                .andExpect(queryParam("sort", "RATING"))
+                .andExpect(queryParam("query", "museum"))
+                .andExpect(queryParam(
+                        "fsq_category_ids",
+                        "4bf58dd8d48988d181941735"
+                ))
+                .andRespond(withSuccess(
+                        """
+                        {
+                          "results": [
+                            {
+                              "fsq_place_id": "test-louvre-id",
+                              "name": "Louvre Museum",
+                              "latitude": 48.8606,
+                              "longitude": 2.3376,
+                              "location": {
+                                "address": "Rue de Rivoli",
+                                "locality": "Paris",
+                                "region": "Île-de-France",
+                                "postcode": "75001",
+                                "country": "France"
+                              },
+                              "categories": [],
+                              "distance": 500,
+                              "rating": 9.2,
+                              "popularity": 0.95
+                            }
+                          ]
                         }
-                      },
-                      "location": {
-                        "formatted_address": "Piazza del Colosseo, Rome, Italy"
-                      },
-                      "categories": [],
-                      "distance": 100,
-                      "rating": 9.0,
-                      "popularity": 0.95
-                    }
-                  ]
-                }
-                """;
+                        """,
+                        MediaType.APPLICATION_JSON
+                ));
 
-        mockServer.expect(
-                        requestTo(
-                                containsString("/places/search")
-                        )
-                )
-                .andExpect(method(GET))
-                .andExpect(
-                        queryParam(
-                                "ll",
-                                "41.8903,12.4922"
-                        )
-                )
-                .andExpect(
-                        queryParam(
-                                "radius",
-                                "5000"
-                        )
-                )
-                .andExpect(
-                        queryParam(
-                                "limit",
-                                "10"
-                        )
-                )
-                .andExpect(
-                        queryParam(
-                                "query",
-                                "Colosseum"
-                        )
-                )
-                .andExpect(
-                        queryParam(
-                                "fields",
-                                "fsq_place_id,name,geocodes,location,categories,distance,rating,popularity"
-                        )
-                )
-                .andExpect(
-                        header(
-                                HttpHeaders.AUTHORIZATION,
-                                startsWith("Bearer ")
-                        )
-                )
-                .andExpect(
-                        header(
-                                "X-Places-Api-Version",
-                                "2025-06-17"
-                        )
-                )
-                .andRespond(
-                        withSuccess(
-                                jsonResponse,
-                                MediaType.APPLICATION_JSON
-                        )
-                );
+        FoursquareResponse response = foursquareClient.search(
+                48.8566,
+                2.3522,
+                1000,
+                "museum",
+                "4bf58dd8d48988d181941735",
+                "RATING",
+                10
+        );
 
-        FoursquareResponse response =
-                foursquareClient.search(
-                        41.8903,
-                        12.4922,
-                        5000,
-                        "Colosseum",
-                        null,
-                        10
-                );
+        assertThat(response).isNotNull();
+        assertThat(response.results()).hasSize(1);
 
-        assertNotNull(response);
-        assertNotNull(response.results());
-        assertFalse(response.results().isEmpty());
-        assertNotNull(response.results().get(0));
+        assertThat(response.results().getFirst().name())
+                .isEqualTo("Louvre Museum");
 
-        assertNotNull(response.results().get(0).name());
+        assertThat(response.results().getFirst().rating())
+                .isEqualTo(9.2);
 
         mockServer.verify();
     }
 
     @Test
-    void shouldFindPlacesByDestination() {
+    void shouldSearchPlacesWithoutOptionalParameters() {
 
-        String jsonResponse = """
-                {
-                  "results": [
-                    {
-                      "fsq_place_id": "test-colosseum-id",
-                      "name": "Colosseum",
-                      "latitude": 41.8902,
-                      "longitude": 12.4922,
-                      "geocodes": {
-                        "main": {
-                          "latitude": 41.8902,
-                          "longitude": 12.4922
+        mockServer.expect(request -> {
+                    assertThat(request.getURI().getPath())
+                            .isEqualTo("/places/search");
+                })
+                .andExpect(method(HttpMethod.GET))
+                .andExpect(queryParam("ll", "41.8902,12.4922"))
+                .andExpect(queryParam("radius", "1000"))
+                .andExpect(queryParam("limit", "10"))
+                .andExpect(queryParam(
+                        "fields",
+                        "fsq_place_id,name,geocodes,location,categories,distance,rating,popularity"
+                ))
+                .andExpect(queryParam("sort", "POPULARITY"))
+                .andRespond(withSuccess(
+                        """
+                        {
+                          "results": []
                         }
-                      },
-                      "location": {
-                        "formatted_address": "Piazza del Colosseo, Rome, Italy"
-                      },
-                      "categories": [],
-                      "distance": 100,
-                      "rating": 9.0,
-                      "popularity": 0.95
-                    }
-                  ]
-                }
-                """;
+                        """,
+                        MediaType.APPLICATION_JSON
+                ));
 
-        mockServer.expect(
-                        requestTo(
-                                containsString("/places/search")
-                        )
-                )
-                .andExpect(method(GET))
-                .andExpect(
-                        queryParam(
-                                "near",
-                                "Rome"
-                        )
-                )
-                .andExpect(
-                        queryParam(
-                                "limit",
-                                "10"
-                        )
-                )
-                .andExpect(
-                        queryParam(
-                                "query",
-                                "Colosseum"
-                        )
-                )
-                .andExpect(
-                        queryParam(
-                                "fields",
-                                "fsq_place_id,name,geocodes,location,categories,distance,rating,popularity"
-                        )
-                )
-                .andExpect(
-                        header(
-                                HttpHeaders.AUTHORIZATION,
-                                startsWith("Bearer ")
-                        )
-                )
-                .andExpect(
-                        header(
-                                "X-Places-Api-Version",
-                                "2025-06-17"
-                        )
-                )
-                .andRespond(
-                        withSuccess(
-                                jsonResponse,
-                                MediaType.APPLICATION_JSON
-                        )
-                );
+        FoursquareResponse response = foursquareClient.search(
+                41.8902,
+                12.4922,
+                1000,
+                null,
+                null,
+                "POPULARITY",
+                10
+        );
+
+        assertThat(response).isNotNull();
+        assertThat(response.results()).isEmpty();
+
+        mockServer.verify();
+    }
+
+    @Test
+    void shouldSearchPlacesByDestination() {
+
+        mockServer.expect(request -> {
+                    assertThat(request.getURI().getPath())
+                            .isEqualTo("/places/search");
+                })
+                .andExpect(method(HttpMethod.GET))
+                .andExpect(queryParam("near", "Rome"))
+                .andExpect(queryParam("limit", "10"))
+                .andExpect(queryParam(
+                        "fields",
+                        "fsq_place_id,name,geocodes,location,categories,distance,rating,popularity"
+                ))
+                .andExpect(queryParam("query", "museum"))
+                .andExpect(queryParam(
+                        "fsq_category_ids",
+                        "4bf58dd8d48988d181941735"
+                ))
+                .andRespond(withSuccess(
+                        """
+                        {
+                          "results": [
+                            {
+                              "fsq_place_id": "test-capitoline-id",
+                              "name": "Capitoline Museums",
+                              "latitude": 41.8931,
+                              "longitude": 12.4828,
+                              "location": {
+                                "address": "Piazza del Campidoglio",
+                                "locality": "Rome",
+                                "region": "Lazio",
+                                "postcode": "00186",
+                                "country": "Italy"
+                              },
+                              "categories": [],
+                              "distance": 800,
+                              "rating": 8.7,
+                              "popularity": 0.9
+                            }
+                          ]
+                        }
+                        """,
+                        MediaType.APPLICATION_JSON
+                ));
 
         FoursquareResponse response =
                 foursquareClient.searchByDestination(
                         "Rome",
-                        "Colosseum",
-                        null,
+                        "museum",
+                        "4bf58dd8d48988d181941735",
                         10
                 );
 
-        assertNotNull(response);
-        assertNotNull(response.results());
-        assertFalse(response.results().isEmpty());
-        assertNotNull(response.results().get(0));
+        assertThat(response).isNotNull();
+        assertThat(response.results()).hasSize(1);
 
-        assertNotNull(response.results().get(0).name());
+        assertThat(response.results().getFirst().name())
+                .isEqualTo("Capitoline Museums");
 
         mockServer.verify();
     }
